# poopip

./: .gitignore  README.md  poop.py  poopip.py  pyproject.toml  test_poop.py  test_poop_e2e.py  test_poopip.py  test_poopip_e2e.py
.github/workflows/: ci.yml
tests/: test_parser.py  test_pyproject.py
